// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processes events in a specific month > buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes events in a specific month > estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progt}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progV}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: MC, operation: progz}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
}
`;

exports[`processes events in a specific month > inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 5691322440613888,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialS",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "works",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 5691322440613888,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 5691322440613888,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialS",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "works",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 8327686449528832,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "work2",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 8327686449528832,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 8327686449528832,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "work2",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 8327686449528832,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialV",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "work2",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 7476405772222464,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serial9",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workF",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 7476405772222464,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 7476405772222464,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial9",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workF",
    },
  },
}
`;

exports[`processes events in a specific month > material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqC" => [
      8327686449528832,
    ],
    "uniqM" => [
      7476405772222464,
    ],
    "uniqp" => [
      5691322440613888,
    ],
  },
  "matsById": Map {
    "8327686449528832" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 8327686449528832,
      "numProcesses": 4,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
    "5691322440613888" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqp",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 5691322440613888,
      "numProcesses": 2,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "7476405772222464" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqM",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 7476405772222464,
      "numProcesses": 2,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
  },
}
`;

exports[`processes events in a specific month > pallet cycles 1`] = `
Map {
  "222" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
  "111" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes events in a specific month > station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "facev",
        "id": 8327686449528832,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "facev",
        "id": 8327686449528832,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progV",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceF",
        "id": 7476405772222464,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "facev",
        "id": 8327686449528832,
        "numproc": 4,
        "part": "part222",
        "proc": 2,
        "serial": "serialV",
        "uniq": "uniqC",
        "workorder": "work2",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceF",
        "id": 7476405772222464,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progz",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 5691322440613888,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceF",
        "id": 7476405772222464,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serial9",
        "uniq": "uniqM",
        "workorder": "workF",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "facep",
        "id": 5691322440613888,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progt",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "facep",
        "id": 5691322440613888,
        "numproc": 2,
        "part": "part111",
        "proc": 1,
        "serial": "serialS",
        "uniq": "uniqp",
        "workorder": "works",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - buffers 1`] = `
Map {
  "402" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-08T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > after filter - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progZ}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, statGroup: MC, operation: prog6}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > after filter - event counter 1`] = `408`;

exports[`processes last 30 events > after filter - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "408" => {
      "cntr": 408,
      "inspType": "Insp1",
      "materialID": 6981347895672832,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialZ",
      "time": 2018-02-08T09:51:05.000Z,
      "workorder": "workC",
    },
    "407" => {
      "cntr": 407,
      "inspType": "Insp1",
      "materialID": 6981347895672832,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6981347895672832,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialZ",
      "time": 2018-02-08T09:44:05.000Z,
      "workorder": "workC",
    },
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 6334762285268992,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "workc",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 6334762285268992,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6334762285268992,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workc",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 4359947557011456,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialO",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workr",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 4359947557011456,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 4359947557011456,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialO",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workr",
    },
  },
}
`;

exports[`processes last 30 events > after filter - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqt" => [
      6981347895672832,
    ],
    "uniqv" => [
      6334762285268992,
    ],
    "uniqC" => [
      4359947557011456,
    ],
  },
  "matsById": Map {
    "6981347895672832" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-08T09:51:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:51:05.000Z,
      "jobUnique": "uniqt",
      "last_event": 2018-02-08T09:51:05.000Z,
      "last_unload_time": 2018-02-08T09:39:05.000Z,
      "materialID": 6981347895672832,
      "numProcesses": 4,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-08T09:39:05.000Z,
      },
    },
    "4359947557011456" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 4359947557011456,
      "numProcesses": 2,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "6334762285268992" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 6334762285268992,
      "numProcesses": 4,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > after filter - pallet cycles 1`] = `
Map {
  "222" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
  "333" => Map {
    "408" => {
      "active": -1,
      "cntr": 408,
      "x": 2018-02-08T09:44:05.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > after filter - station cycles 1`] = `
Map {
  "406" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 406,
    "isLabor": true,
    "material": [
      {
        "face": "faceN",
        "id": 6981347895672832,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:39:05.000Z,
    "y": 3,
  },
  "404" => {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 404,
    "isLabor": false,
    "material": [
      {
        "face": "faceN",
        "id": 6981347895672832,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progE",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:29:05.000Z,
    "y": 12,
  },
  "400" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 400,
    "isLabor": true,
    "material": [
      {
        "face": "faceN",
        "id": 6981347895672832,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialZ",
        "uniq": "uniqt",
        "workorder": "workC",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 333,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progR",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progZ",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > after filter - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progZ}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "9",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "i",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "c",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog6}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "E",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "L",
        },
      ],
    },
  ],
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - buffers 1`] = `
Map {
  "302" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-06T09:14:05.000Z,
    "numMaterial": 1,
  },
  "202" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-01-31T09:14:05.000Z,
    "numMaterial": 1,
  },
  "102" => {
    "buffer": {
      "stockerNum": 4,
      "type": "StockerWaitForMC",
    },
    "elapsedSeconds": 240,
    "endTime": 2018-02-02T09:14:05.000Z,
    "numMaterial": 1,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "{part: part222}, statGroup: L/U, operation: LOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-2}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part222}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "{part: part111}, statGroup: MC, operation: progZ}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "{part: part222}, statGroup: MC, operation: progR}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "{part: part222}, statGroup: MC, operation: prog6}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "{part: part111}, statGroup: L/U, operation: UNLOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "{part: part111}, statGroup: L/U, operation: LOAD-1}" => {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - event counter 1`] = `309`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "{part: part111}, inspType: Insp1}" => Map {
    "108" => {
      "cntr": 108,
      "inspType": "Insp1",
      "materialID": 6334762285268992,
      "part": "part111",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:09:05.000Z,
      "workorder": "workc",
    },
    "107" => {
      "cntr": 107,
      "inspType": "Insp1",
      "materialID": 6334762285268992,
      "part": "part111",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6334762285268992,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialh",
      "time": 2018-02-02T10:02:05.000Z,
      "workorder": "workc",
    },
  },
  "{part: part222}, inspType: Insp1}" => Map {
    "309" => {
      "cntr": 309,
      "inspType": "Insp1",
      "materialID": 6351644323217408,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:57:10.000Z,
      "workorder": "workf",
    },
    "308" => {
      "cntr": 308,
      "inspType": "Insp1",
      "materialID": 6351644323217408,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 6351644323217408,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:50:10.000Z,
      "workorder": "workf",
    },
    "307" => {
      "cntr": 307,
      "inspType": "Insp1",
      "materialID": 6351644323217408,
      "part": "part222",
      "result": {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialU",
      "time": 2018-01-06T09:50:05.000Z,
      "workorder": "workf",
    },
    "208" => {
      "cntr": 208,
      "inspType": "Insp1",
      "materialID": 4359947557011456,
      "part": "part222",
      "result": {
        "success": true,
        "type": 2,
      },
      "serial": "serialO",
      "time": 2018-01-31T10:03:05.000Z,
      "workorder": "workr",
    },
    "207" => {
      "cntr": 207,
      "inspType": "Insp1",
      "materialID": 4359947557011456,
      "part": "part222",
      "result": {
        "actualPath": [
          {
            "loadStation": 1,
            "materialID": 4359947557011456,
            "pallet": 6,
            "process": 1,
            "stops": [
              {
                "stationName": "MC",
                "stationNum": 4,
              },
            ],
            "unloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialO",
      "time": 2018-01-31T09:56:05.000Z,
      "workorder": "workr",
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - material summary 1`] = `
{
  "matIdsForJob": Map {
    "uniqv" => [
      6334762285268992,
    ],
    "uniqQ" => [
      6351644323217408,
    ],
    "uniqC" => [
      4359947557011456,
    ],
  },
  "matsById": Map {
    "4359947557011456" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-31T10:03:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T10:03:05.000Z,
      "jobUnique": "uniqC",
      "last_event": 2018-01-31T10:03:05.000Z,
      "last_unload_time": 2018-01-31T09:51:05.000Z,
      "materialID": 4359947557011456,
      "numProcesses": 2,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-01-31T09:51:05.000Z,
      },
    },
    "6334762285268992" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-02-02T10:09:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:09:05.000Z,
      "jobUnique": "uniqv",
      "last_event": 2018-02-02T10:09:05.000Z,
      "last_unload_time": 2018-02-02T09:57:05.000Z,
      "materialID": 6334762285268992,
      "numProcesses": 4,
      "partName": "part111",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "1": 2018-02-02T09:57:05.000Z,
      },
    },
    "6351644323217408" => {
      "completedInspections": {
        "Insp1": {
          "success": true,
          "time": 2018-01-06T09:57:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:57:10.000Z,
      "jobUnique": "uniqQ",
      "last_event": 2018-01-06T09:57:10.000Z,
      "last_unload_time": 2018-01-06T09:45:05.000Z,
      "materialID": 6351644323217408,
      "numProcesses": 1,
      "partName": "part222",
      "quarantineAfterUnload": false,
      "signaledInspections": [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": {
        "2": 2018-01-06T09:45:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "222" => Map {
    "208" => {
      "active": -1,
      "cntr": 208,
      "x": 2018-01-31T09:56:05.000Z,
      "y": 44,
    },
    "108" => {
      "active": -1,
      "cntr": 108,
      "x": 2018-02-02T10:02:05.000Z,
      "y": 44,
    },
  },
  "111" => Map {
    "309" => {
      "active": -1,
      "cntr": 309,
      "x": 2018-01-06T09:50:10.000Z,
      "y": 44,
    },
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - station cycles 1`] = `
Map {
  "306" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 306,
    "isLabor": true,
    "material": [
      {
        "face": "faceH",
        "id": 6351644323217408,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:45:05.000Z,
    "y": 3,
  },
  "304" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 304,
    "isLabor": false,
    "material": [
      {
        "face": "faceH",
        "id": 6351644323217408,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "prog6",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:35:05.000Z,
    "y": 18,
  },
  "206" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 206,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:51:05.000Z,
    "y": 3,
  },
  "300" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 300,
    "isLabor": true,
    "material": [
      {
        "face": "faceH",
        "id": 6351644323217408,
        "numproc": 1,
        "part": "part222",
        "proc": 2,
        "serial": "serialU",
        "uniq": "uniqQ",
        "workorder": "workf",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 111,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  "204" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 204,
    "isLabor": false,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progR",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:41:05.000Z,
    "y": 24,
  },
  "106" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 106,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:57:05.000Z,
    "y": 3,
  },
  "200" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 200,
    "isLabor": true,
    "material": [
      {
        "face": "faceT",
        "id": 4359947557011456,
        "numproc": 2,
        "part": "part222",
        "proc": 1,
        "serial": "serialO",
        "uniq": "uniqC",
        "workorder": "workr",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part222",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  "104" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 104,
    "isLabor": false,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progZ",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:47:05.000Z,
    "y": 30,
  },
  "100" => {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 100,
    "isLabor": true,
    "material": [
      {
        "face": "face7",
        "id": 6334762285268992,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "serialh",
        "uniq": "uniqv",
        "workorder": "workc",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": 222,
    "part": "part111",
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
}
`;

exports[`processes last 30 events > initial 27 days ago, two days ago, and today - tool use 1`] = `
Map {
  "{part: part111}, statGroup: MC, operation: progZ}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.43333333333333335,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "9",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.5166666666666667,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "i",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: progR}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.7833333333333333,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "c",
        },
      ],
    },
  ],
  "{part: part222}, statGroup: MC, operation: prog6}" => [
    {
      "tools": [
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.31666666666666665,
          "toolChangedDuringMiddleOfCycle": false,
          "toolName": "E",
        },
        {
          "cycleUsageCnt": 0,
          "cycleUsageMinutes": 0.4,
          "toolChangedDuringMiddleOfCycle": true,
          "toolName": "L",
        },
      ],
    },
  ],
}
`;
